Fix gap menu and move pdf

--- a/static/styles/ckvbasis.css
+++ b/static/styles/ckvbasis.css
@@ -84,7 +84,7 @@ ul, ol {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    gap: 1.5%;
+    gap: 15px;
     position: relative;
     align-content: center;
     flex-wrap: wrap;
